Added CSS styling and implementing smaller features

--- a/public/home/styles.css
+++ b/public/home/styles.css
@@ -34,6 +34,11 @@
     max-height:100%;
 }
 
+#main__img{
+    width: 683px;
+    height: 683px
+}
+
 .fa-gem{
     margin-right: 0.5rem;
 }
@@ -47,6 +52,10 @@
 
 .navbar__item{
     height: 80px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .navbar__links{
@@ -106,12 +115,11 @@
         grid-template-columns: auto;
         margin: 0;
         width: 100%;
-        position: absolute;
         top: -1000px;
         opacity: 0;
         transition: all 0.5s ease;
         height: 50vh;
-        z-index: -1;
+        z-index: -15;
         background: black;
     }
 
@@ -180,4 +188,69 @@
     #mobile-menu.is-active .bar:nth-child(3) {
         transform:traslateY(-8px) rotate(-45deg);
     }
+}
+
+#background-video {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -4;
+  }
+.main {
+    position: relative;
+    background-color:#53212B;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.main__container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items:center;
+    justify-self: center;
+    margin: 0 auto;
+    height: 100vh;
+    background-color:#53212B;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0 50px;
+}
+
+
+.main__content h1{
+    font-size: 4rem;
+    background-color: #ff8177;
+    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    z-index: 999;
+} 
+
+.main__content h2{
+    font-size: 4rem;
+    background-color: #ff8177;
+    background-image: linear-gradient(to top, #b721ff 0%, #21d4fd 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.main__content p{
+    margin-top: 1rem;
+    font-size: 2rem;
+    font-weight: 700;
+    color:white;
 }
