--- a/public/agents/agents.css
+++ b/public/agents/agents.css
@@ -37,6 +37,44 @@
 	 height: 524px;
 	 width: 524px;
  }
+
+ #agent__container{
+	 display:flex;
+	 flex-wrap: wrap;
+	 justify-content: center;
+	 background-color: #FD4556;
+
+ }
+
+ .agentCard{
+	 background: black;
+	 width: 524px;
+	 margin: 10px;
+	 color: white;
+	 border-radius: 15px;
+ }
+
+ .agentName{
+	 justify-content: center;
+	 text-align: center;
+	 padding: 5px;
+ }
+
+ .agentDescription{
+	 padding:25px
+ }
+
+ .abilityDescription{
+	 padding:5px
+ }
+
+ .agentName{
+	padding:5px
+}
+
+.slot{
+	padding:25px
+}
  
  .fa-gem{
 	 margin-right: 0.5rem;
