--- a/public/agents/agents.css
+++ b/public/agents/agents.css
@@ -63,9 +63,8 @@
  .agentDescription{
 	 padding:25px
  }
-
  .abilityDescription{
-	 padding:5px
+	 font-size: 15px;
  }
 
  .agentName{
@@ -131,6 +130,33 @@
 	 color:#fa4454;
 	 transition: all 0.3s ease;
  }
+
+
+.favBtn{
+	justify-content: center; 
+	align-items: center;
+	text-decoration: none;
+	padding: 10px 20px ;
+	height: 100%;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	background: #fa4454;
+	color: white;
+}
+
+.favBtn:hover{
+	background:#364966;
+	transition: all 0.3s ease;
+}
+
+.centerBtn{
+	text-align: center;
+	padding: 20px 5px 0px 0px;
+}
+
+
+
  
  @media screen and (max-width: 960px){
 	 .navbar__container{
