--- a/public/favorite_agents/favorites.css
+++ b/public/favorite_agents/favorites.css
@@ -97,7 +97,76 @@
 	 color:#fa4454;
 	 transition: all 0.3s ease;
  }
- 
+
+ .favAgentCard{
+	background: black;
+	width: 524px;
+	margin: 10px;
+	color: white;
+	border-radius: 15px;
+}
+
+.agentName{
+	justify-content: center;
+	text-align: center;
+	padding: 5px;
+}
+
+.agentDescription{
+	padding:25px
+}
+.abilityDescription{
+	font-size: 15px;
+}
+
+.agentName{
+   padding:5px
+}
+
+.slot{
+   padding:25px
+}
+
+#agent__container{
+	display:flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	background-color: #FD4556;
+
+}
+
+h2{
+	justify-content: center;
+	 text-align: center;
+	 padding: 5px;
+}
+p{
+	justify-content: center;
+	text-align: center;
+	padding: 5px;
+}
+
+.deleteBtn{
+	justify-content: center; 
+	align-items: center;
+	text-decoration: none;
+	padding: 10px 20px ;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	background: #fa4454;
+	color: white;
+}
+
+.deleteBtn:hover{
+	background:#364966;
+	transition: all 0.3s ease;
+}
+
+.centerDelete{
+	text-align: center;
+	padding: 15px 15px 15px 15px;
+}
  @media screen and (max-width: 960px){
 	 .navbar__container{
 		 display: flex;
