--- a/public/favorite_agents/favorites.css
+++ b/public/favorite_agents/favorites.css
@@ -167,6 +167,23 @@ p{
 	text-align: center;
 	padding: 15px 15px 15px 15px;
 }
+#favorite{
+    text-align:center;
+	font-size: 3rem;
+    background-color: #ff8177;
+    background-image: linear-gradient(to top, #b721ff 0%, #21d4fd 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+	z-index: 999;
+
+} 
+#favoriteTitle{
+	background:black;
+}
+
  @media screen and (max-width: 960px){
 	 .navbar__container{
 		 display: flex;
